kubernetes/oauth2/ingress_oauth.yaml
#Copyright (c) 2024 CEA LIST
#Ingress for the oauth2 proxy
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # this ingress exposes the oauth2 proxy. It is used for authenticating the papyrusweb application
  name: papyrusweb-oauth-ingress
  namespace: papyrusweb
  annotations:
    #use some certification manager. The example uses a letsencrypt one
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    # this annotation is needed to avoid header size errors
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
spec:
  ingressClassName: nginx
  rules:
  # Replace HOSTNAME with a valid URL
  - host: HOSTNAME
    http:
      # this path is fixed, used by the oauth2 proxy
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            # this is the name of the oauth2 service that was created/installed by the helm chart
            # the port number is fixed
            name: pweboauth2-oauth2-proxy
            port:
              number: 80
  tls:
    - hosts:
      - HOSTNAME
      secretName: HOSTNAME-tls
